added comment on login

--- a/andela-assignment/pages/login.html
+++ b/andela-assignment/pages/login.html
@@ -30,6 +30,7 @@
         </div>
        <center><a href="./signup.html">Signup here</a></center>
         <button type="submit">Login</button>
+        <!--login html button is above-->
     </form>
  </body>
  </html>
