changed images on manage blogs

--- a/andela-assignment/pages/manageblog.html
+++ b/andela-assignment/pages/manageblog.html
@@ -32,19 +32,19 @@
     <!--POSTS-->
     <div class="content-edit">
       <div class="blogeditdown-panel">
-            <img src="./graphics/gx5.jpg" alt="" class="blog-edit-image">
+            <img src="../graphics/CES-2023-PEUGEOT_INCEPTION_CONCEPT_2301CN202.webp" alt="" class="blog-edit-image">
            <span>
               <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
              <a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png"  class="iconise-edit"/></a>
            </span>
       </div> 
         <div class="blogeditdown-panel">
-            <img src="./graphics/lamborghini-urus.jpg" alt="" class="blog-edit-image">
+            <img src="../graphics/Tesla-Roadster-103.jpg" alt="" class="blog-edit-image">
             <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
 <a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png" class="iconise-edit" /></a>
       </div>
     <div class="blogeditdown-panel">
-      <img src="./graphics/Tesla-Roadster-103.jpg" alt="" class="blog-edit-image">
+      <img src="../graphics/arduino.jpg" alt="" class="blog-edit-image">
       <div class="blog-edit">
         <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
 <a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png" class="iconise-edit" /></a>
