--- a/andela-assignment/pages/manageblog.html
+++ b/andela-assignment/pages/manageblog.html
@@ -33,6 +33,7 @@
     <div class="content-edit">
       <div class="blogeditdown-panel">
             <img src="../graphics/CES-2023-PEUGEOT_INCEPTION_CONCEPT_2301CN202.webp" alt="" class="blog-edit-image">
+            <p id="blogedit-prgrph">ces 2023 shown new car technologies</p>
            <span>
               <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
              <a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png"  class="iconise-edit"/></a>
