the remaining data on dashboard

--- a/andela-assignment/pages/manageblog.html
+++ b/andela-assignment/pages/manageblog.html
@@ -41,14 +41,17 @@
       </div> 
         <div class="blogeditdown-panel">
             <img src="../graphics/Tesla-Roadster-103.jpg" alt="" class="blog-edit-image">
+              <p id="blogedit-prgrph">ces 2023 shown new car technologies</p>
             <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
 <a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png" class="iconise-edit" /></a>
       </div>
     <div class="blogeditdown-panel">
       <img src="../graphics/arduino.jpg" alt="" class="blog-edit-image">
+        <p id="blogedit-prgrph">ces 2023 shown new car technologies</p>
       <div class="blog-edit">
         <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
 <a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png" class="iconise-edit" /></a>
+
 
       </div>
     </div>
