--- a/andela-assignment/pages/editorialspace.html
+++ b/andela-assignment/pages/editorialspace.html
@@ -5,26 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>editorial-space</title>
-    <link rel="stylesheet" href="style.css">
+     
+    <link rel="stylesheet" href="./addblog.css">
 </head>
 <body>
     <a href="Admindashboard.html" class="backdash">Dashboard</a>
     <h4 class="editorialtitle">Add New Post</h4>
-    <div class="edicontainer">
-<div class="editorial-header">
-       <img src="https://img.icons8.com/ultraviolet/40/null/bold.png" />
-        <img src="https://img.icons8.com/office/40/null/italic.png" />
-        <img src="https://img.icons8.com/ultraviolet/40/null/tear-off-calendar.png" />
-        <img src="https://img.icons8.com/office/40/null/sort-down.png" />
-       <img src="https://img.icons8.com/ultraviolet/40/null/live-folder.png" / >
-  
-  
- 
-<div class="editorial-space">
- <textarea name="" id="" cols="164" rows="26"></textarea>
-</div>
-</div>
-    </div>
-    <button id="Editorialupload">Upload</button>
+    <form action="" class="container">
+        <label for="title" class="titles">Title</label>
+        <input type="text" id="title" placeholder="Title">
+        <label for="date" class="titles">Date</label>
+        <input type="date" id="date" placeholder="date">
+        <label for="picture" class="titles">Picture</label>
+        <input type="file" id="picture" placeholder="picture">
+        <label for="textarea" class="titles">Blog body</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <label for="select" class="titles">Select Blog Category</label>
+        <select name="action" id="statuse">
+            <option value="Published">None</option>
+            <option value="Published">Studying</option>
+            <option value="Not published">Technews</option>
+        </select>
+    </form>
+  <button type="submit" id="submit" class="upload-button">Upload</button>
 </body>
 </html>
