added readmore page in code

--- a/andela-assignment/pages/editorialspace.html
+++ b/andela-assignment/pages/editorialspace.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <a href="Admindashboard.html" class="backdash">Dashboard</a>
-    <h4 class="editorialtitle">Add New Post</h4>
+    <h4 class="add-post-title">Add New Post</h4>
     <form action="" class="container">
         <label for="title" class="titles">Title</label>
         <input type="text" id="title" placeholder="Title">
