--- a/andela-assignment/pages/blogs.html
+++ b/andela-assignment/pages/blogs.html
@@ -36,7 +36,7 @@
     <img src="../graphics/arduino.jpg" alt="blog image">
     <h2>Arduino</h2>
     <p>How arduino is shaping future of robotic engineering.</p>
-    <a class="read-more-btn" href="readmore.html">
+    <a class="read-more-btn" href="../pages/readmore.html">
         Readmore
     </a>
 </div>
@@ -44,7 +44,7 @@
     <img src="../graphics/gx5.jpg" alt="blog image">
     <h2>Smart Watch</h2>
     <p>How smart watch works is amazing concept</p>
-    <a class="read-more-btn" href="readmore.html">
+    <a class="read-more-btn" href="../pages/readmore.html">
         Readmore
     </a>
 </div>
@@ -52,7 +52,7 @@
     <img src="../graphics/CES-2023-PEUGEOT_INCEPTION_CONCEPT_2301CN202.webp" alt="blog image">
     <h2>Audi sky sphere</h2>
     <p>How audi sly sphere is running on android </p>
-    <a class="read-more-btn" href="readmore.html">
+    <a class="read-more-btn" href="../pages/readmore.html">
         Readmore
     </a>
 </div>
@@ -60,7 +60,7 @@
     <img src="../graphics/javascript1.jpg" alt="blog image">
     <h2>First Time Coding </h2>
     <p>Excel at coding is the more of </p>
-    <a class="read-more-btn" href="readmore.html">
+    <a class="read-more-btn" href="../pages/readmore.html">
         Readmore
     </a>
 </div>
@@ -68,7 +68,7 @@
     <img src="../graphics/Marketing-skills.jpg" alt="blog image">
     <h2>how to crack code </h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <a class="read-more-btn" href="readmore.html">
+    <a class="read-more-btn" href="../pages/readmore.html">
         Readmore
     </a>
 </div>
