--- a/andela-assignment/pages/contactme.html
+++ b/andela-assignment/pages/contactme.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
         integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+        <script  defer src="../pages/contactme.js"></script>
     <style>
         /* Add styles for the body */
         body {
@@ -84,7 +85,7 @@
 
     <!-- Add form -->
     
-    <form action="" method="post">
+    <form action="" method="post" id="contac-form">
         <h1>Contact Me</h1>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
