--- a/andela-assignment/pages/contactme.html
+++ b/andela-assignment/pages/contactme.html
@@ -87,17 +87,17 @@
     <form action="" method="post" id="contact-form">
         <h1>Contact Me</h1>
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" >
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" >
 
         <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
+        <textarea id="message" name="message" rows="5" ></textarea>
 
         <input type="submit" value="Submit">
     </form>
-    <script src="../pages/"></script>
+    <script src="../pages/contactme.js"></script>
     <footer class="fixedfooter">
         &copy;VTECHNEWS 2023
     </footer>
