user logged on as someone added code in java script

--- a/andela-assignment/pages/Admindashboard.html
+++ b/andela-assignment/pages/Admindashboard.html
@@ -7,10 +7,13 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-   <div class="adminimage">
-    <a href="Home.html" class="logout">LOGOUT</a>
-   </div>
+<body> 
+    <div id="user-profile">
+        <img class="user-image" src="../graphics/VG.jpg" alt="Profile Picture">
+        <h2 class="user-name"></h2>
+    </div>
+
+
         <div class="sidepanel">
     <center><h4 class="dashboard-title"><a href="" class="dashboard-title"><img src="https://img.icons8.com/ultraviolet/40/null/speed.png" />Dashboard</a></h4></center>
         <br>
