--- a/andela-assignment/pages/Admindashboard.html
+++ b/andela-assignment/pages/Admindashboard.html
@@ -10,10 +10,8 @@
 <body> 
     <div id="user-profile">
         <img class="user-image" src="../graphics/VG.jpg" alt="Profile Picture">
-        <h2 class="user-name"></h2>
+        <h2 class="user-name">vg</h2>
     </div>
-
-
         <div class="sidepanel">
     <center><h4 class="dashboard-title"><a href="" class="dashboard-title"><img src="https://img.icons8.com/ultraviolet/40/null/speed.png" />Dashboard</a></h4></center>
         <br>
