--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
  </head>
 <script defer src="./login.js"></script>
  <body>
-        <a href="Home.html">
+        <a href="./index.html">
             <h2>virgile</h2>
         </a>
     <form id="form" action="">
