--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
          <link rel="stylesheet" href="./style.css">
         <script defer src="./signup.js"></script>
     </head>
-    <a href="Home.html"><h2>virgile</h2></a>
+    <a href="./index.html"><h2>virgile</h2></a>
             <form id="form" action="/">
                 <h1 class="heading-color">Signup</h1>
                 <div class="input-control">
