--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
 <body>
         <!--navigation bar-->
         <nav>
-            <div class="left-side"><a href="Home.html">Virgile</a></div>
+            <div class="left-side"><a href="./index.html">Virgile</a></div>
             <div class="right-side">
                 <a href="Home.html">Home</a>
                 <a href="About.html">About</a>
