--- a/Skills.html
+++ b/Skills.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <div class="left-side"><a href="Home.html">Virgile</a></div>
+        <div class="left-side"><a href="./index.html">Virgile</a></div>
         <div class="right-side">
             <a href="Home.html">Home</a>
             <a href="About.html">About</a>
