--- a/readmore.html
+++ b/readmore.html
@@ -8,7 +8,7 @@
      <link rel="stylesheet" href="./comment.css">
 </head>
 <body> 
-    <h2><a href="blogs.html" class="backhome">Blogs</a></h2>
+    <h2><a href="./blogs.html" class="backhome">Blogs</a></h2>
     <center><H2 class="title">Labmborgin Urus</H2></center>
     <div class="readmore-container">
         <div class="read-more-picture">
