verification on skills section

--- a/Skills.html
+++ b/Skills.html
@@ -26,7 +26,7 @@
     <!--skills section body-->
     <div class="skills-section">
         <div class="skill-column">
-            <div class="skill-icon ui-ux"><img src="../graphics/userinterface.JPG" alt=""></div>
+            <div class="skill-icon ui-ux"><img src="./graphics/userinterface.JPG" alt=""></div>
             <p> UI/UX (User Interface/User Experience) refers to the design and overall experience of a user when interacting with a
             product, specifically in the context of digital products such as websites and mobile applications. With experience in
             UI/UX design, one can create visually appealing and user-friendly interfaces that provide a seamless and intuitive
@@ -35,7 +35,7 @@
             aesthetically pleasing and functional, delivering a positive experience for the end-user.</p>
         </div>
         <div class="skill-column">
-            <div class="skill-icon javascript"><img src="../graphics/javascript.JPG" alt=""></div>
+            <div class="skill-icon javascript"><img src="./graphics/javascript.JPG" alt=""></div>
             <p> JavaScript is a high-level, dynamic programming language widely used for creating interactive user experiences on the
             web. With experience in JavaScript, one can create dynamic and responsive web pages by adding interactivity, animation,
             and other effects to enhance user engagement. JavaScript is commonly used to add logic to web pages and interact with
@@ -45,7 +45,7 @@
         </div>
         
         <div class="skill-column">
-            <div class="skill-icon css"><img src="../graphics/css.JPG" alt=""></div>
+            <div class="skill-icon css"><img src="./graphics/css.JPG" alt=""></div>
             <p>CSS (Cascading Style Sheets) is a stylesheet language used for describing the look and formatting of a document written
             in HTML. With experience in CSS, one can create visually appealing and cohesive websites by controlling elements such as
             color, font, layout, and more. CSS allows developers to separate the presentation style of a website from its structure,
@@ -54,7 +54,7 @@
             modern web development</p>
         </div>
         <div class="skill-column">
-            <div class="skill-icon css"><img src="../graphics/html.JPG" alt=""></div>
+            <div class="skill-icon css"><img src="./graphics/html.JPG" alt=""></div>
             <p> HTML, or Hypertext Markup Language, is a standard markup language used for creating web pages and websites. With
             experience in HTML, one can create visually appealing and functional websites that can be accessed by a wide range of
             users through the internet. HTML provides a basic structure for website content and allows for the inclusion of
