verifications on portifolio and skills

--- a/portifolio.html
+++ b/portifolio.html
@@ -52,9 +52,9 @@
     <!--project worked on section-->
     <div class="project-worked">
       <h1 class="workedonh">Project worked on</h1>
-      <img src="../graphics/jsconfirm.png" alt="">
-      <img src="../graphics/download.png" alt="">
-      <img src="../graphics/cssproj.png" alt="">
+      <img src="./graphics/jsconfirm.png" alt="">
+      <img src="./graphics/download.png" alt="">
+      <img src="./graphics/cssproj.png" alt="">
     </div>
     <footer class="fixedfooter">
         &copy;VTECHNEWS 2023
