modifications manage blog portifolio and blogs and modifications on portifolio

--- a/blogs.html
+++ b/blogs.html
@@ -25,50 +25,50 @@
    <br>
    <hr>
 <div class="blog-card">
-    <img src="../graphics/1614852308_redmi_note_10_pro_max_processor.jpg" alt="blog image">
+    <img src="./graphics/1614852308_redmi_note_10_pro_max_processor.jpg" alt="blog image">
     <h2>Censors</h2>
     <p>How censors works and how it is good.</p>
-    <a class="read-more-btn" href="readmore.html">
+    <a class="read-more-btn" href="./readmore.html">
         Readmore
     </a>
 </div>
 <div class="blog-card">
-    <img src="../graphics/arduino.jpg" alt="blog image">
+    <img src="./graphics/arduino.jpg" alt="blog image">
     <h2>Arduino</h2>
     <p>How arduino is shaping future of robotic engineering.</p>
-    <a class="read-more-btn" href="../pages/readmore.html">
+    <a class="read-more-btn" href="./readmore.html">
         Readmore
     </a>
 </div>
 <div class="blog-card">
-    <img src="../graphics/gx5.jpg" alt="blog image">
+    <img src="./graphics/gx5.jpg" alt="blog image">
     <h2>Smart Watch</h2>
     <p>How smart watch works is amazing concept</p>
-    <a class="read-more-btn" href="../pages/readmore.html">
+    <a class="read-more-btn" href="./readmore.html">
         Readmore
     </a>
 </div>
 <div class="blog-card">
-    <img src="../graphics/CES-2023-PEUGEOT_INCEPTION_CONCEPT_2301CN202.webp" alt="blog image">
+    <img src="./graphics/CES-2023-PEUGEOT_INCEPTION_CONCEPT_2301CN202.webp" alt="blog image">
     <h2>Audi sky sphere</h2>
     <p>How audi sly sphere is running on android </p>
-    <a class="read-more-btn" href="../pages/readmore.html">
+    <a class="read-more-btn" href="./readmore.html">
         Readmore
     </a>
 </div>
 <div class="blog-card">
-    <img src="../graphics/javascript1.jpg" alt="blog image">
+    <img src="./graphics/javascript1.jpg" alt="blog image">
     <h2>First Time Coding </h2>
     <p>Excel at coding is the more of </p>
-    <a class="read-more-btn" href="../pages/readmore.html">
+    <a class="read-more-btn" href="./readmore.html">
         Readmore
     </a>
 </div>
 <div class="blog-card">
-    <img src="../graphics/Marketing-skills.jpg" alt="blog image">
+    <img src="./graphics/Marketing-skills.jpg" alt="blog image">
     <h2>how to crack code </h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <a class="read-more-btn" href="../pages/readmore.html">
+    <a class="read-more-btn" href="./readmore.html">
         Readmore
     </a>
 </div>
