--- a/manageblog.html
+++ b/manageblog.html
@@ -32,7 +32,7 @@
     <!--POSTS-->
     <div class="content-edit">
       <div class="blogeditdown-panel">
-            <img src="../graphics/CES-2023-PEUGEOT_INCEPTION_CONCEPT_2301CN202.webp" alt="" class="blog-edit-image">
+            <img src="./graphics/Tesla-Roadster-103.jpg" alt="" class="blog-edit-image">
             <p id="blogedit-prgrph">ces 2023 shown new car technologies</p>
            <span>
               <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
@@ -40,13 +40,13 @@
            </span>
       </div> 
         <div class="blogeditdown-panel">
-            <img src="../graphics/Tesla-Roadster-103.jpg" alt="" class="blog-edit-image">
+            <img src="./graphics/lamborghini-urus.jpg" alt="" class="blog-edit-image">
               <p id="blogedit-prgrph">ces 2023 shown new car technologies</p>
             <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
 <a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png" class="iconise-edit" /></a>
       </div>
     <div class="blogeditdown-panel">
-      <img src="../graphics/arduino.jpg" alt="" class="blog-edit-image">
+      <img src="./graphics/arduino.jpg" alt="" class="blog-edit-image">
         <p id="blogedit-prgrph">ces 2023 shown new car technologies</p>
       <div class="blog-edit">
         <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
