modification on contact me links

--- a/contactme.html
+++ b/contactme.html
@@ -71,12 +71,12 @@
 <nav>
     <div class="left-side"><a href="Home.html">Virgile</a></div>
     <div class="right-side">
-        <a href="Home.html">Home</a>
-        <a href="About.html">About</a>
-        <a href="blogs.html">Blogs</a>
-        <a href="Skills.html">Skills</a>
-        <a href="portifolio.html">Portfolio</a>
-        <a href="Login.html">Login</a>
+        <a href="./index.html">Home</a>
+        <a href="./About.html">About</a>
+        <a href="./About.html">Blogs</a>
+        <a href="./Skills.html">Skills</a>
+        <a href="./portifolio.html">Portfolio</a>
+        <a href="./login.html">Login</a>
     </div>
 </nav
      
