--- a/contactme.html
+++ b/contactme.html
@@ -97,7 +97,7 @@
 
         <input type="submit" value="Submit">
     </form>
-    <script src="../pages/contactme.js"></script>
+    <script src="./contactme.js"></script>
     <footer class="fixedfooter">
         &copy;VTECHNEWS 2023
     </footer>
