--- a/editorialspace.html
+++ b/editorialspace.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>editorial-space</title>
-    <script  defer src="../pages/editorialspace.js"></script>
+    <script  defer src="./editorialspace.js"></script>
     <link rel="stylesheet" href="./addblog.css">
 </head>
 <body>
