--- a/Admindashboard.html
+++ b/Admindashboard.html
@@ -11,7 +11,9 @@
     <div id="user-profile">
         <img class="user-image" src="../graphics/VG.jpg" alt="Profile Picture">
         <h2 class="user-name">vg</h2>
+        <a href="./login.html">logout</a>
     </div>
+
         <div class="sidepanel">
     <center><h4 class="dashboard-title"><a href="" class="dashboard-title"><img src="https://img.icons8.com/ultraviolet/40/null/speed.png" />Dashboard</a></h4></center>
         <br>
