added  codes on javascript to signup to check if user exist

--- a/TEST2.HTML
+++ b/TEST2.HTML
@@ -14,6 +14,8 @@
   <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
     crossorigin="anonymous"></script>
   <title>Capstone Project</title>
+  <script defer src="./blog.js"></script>
+
 
 </head>
 
@@ -50,13 +52,13 @@
       </div>
     </div>
     <h3 class="i-name">
-      Edit Blog
+      Add new Blog
     </h3>
     <p class="i-description">
-      Edit blog here
+      Add a new blog to the website
     </p>
     <div class="form-container">
-      <form action="#" id="editForm">
+      <form action="#" id="form">
         <div class="form-group">
           <label for="title">Title:</label>
           <input type="text" id="title" name="title" placeholder="Title">
@@ -99,8 +101,6 @@
         <!-- <a href="article.html" class="submit-btn"> Save</a> -->
       </form>
     </div>
-
-
   </section>
   <script>
     $('#menu-btn').click(function () {
