--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
                     <input id="password2" name="password2" type="password">
                     <div class="error"></div>
                 </div>
-                <button type="submit">Sign Up</button>
+                <button type="submit" id="submit">Sign Up</button>
             </form>
         </div>
     </body>
