edited editorial space

--- a/Admindashboard.html
+++ b/Admindashboard.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="./Admin.js"></script>
 </head>
 <body> 
     <div id="user-profile">
         <img class="user-image" src="../graphics/VG.jpg" alt="Profile Picture">
-        <h2 class="user-name">vg</h2>
-        <a href="./login.html">logout</a>
+        <h2 id=""></h2>
+        <a href="./login.html" id="logout">logout</a>
     </div>
 
         <div class="sidepanel">
