--- a/editorialspace.html
+++ b/editorialspace.html
@@ -39,6 +39,20 @@
 
         <div id="blogPreview"></div>
     </div>
+    <div id="blogList"></div>
+    
+    <template id="blogTemplate">
+        <div class="blog-card">
+            <h2 class="blog-title"></h2>
+            <img class="blog-image" src="" alt="">
+            <p class="blog-date"></p>
+            <p class="blog-body"></p>
+            <div class="blog-buttons">
+                <button class="delete-button">Delete</button>
+                <button class="update-button">Update</button>
+            </div>
+        </div>
+    </template>
 </body>
 
 </html>
