--- a/manageblog.html
+++ b/manageblog.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+     <script  defer src="./manageblog.js"></script>
 </head>
 <body>
     </div>
@@ -29,32 +30,6 @@
         class="managetitle">Manage-Blogs</a>
     
     </div>
-    <!--POSTS-->
-    <div class="content-edit">
-      <div class="blogeditdown-panel">
-            <img src="./graphics/Tesla-Roadster-103.jpg" alt="" class="blog-edit-image">
-            <p id="blogedit-prgrph">ces 2023 shown new car technologies</p>
-           <span>
-              <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
-             <a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png"  class="iconise-edit"/></a>
-           </span>
-      </div> 
-        <div class="blogeditdown-panel">
-            <img src="./graphics/lamborghini-urus.jpg" alt="" class="blog-edit-image">
-              <p id="blogedit-prgrph">ces 2023 shown new car technologies</p>
-            <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
-<a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png" class="iconise-edit" /></a>
-      </div>
-    <div class="blogeditdown-panel">
-      <img src="./graphics/arduino.jpg" alt="" class="blog-edit-image">
-        <p id="blogedit-prgrph">ces 2023 shown new car technologies</p>
-      <div class="blog-edit">
-        <img src="https://img.icons8.com/fluency-systems-regular/48/000000/delete-forever.png" class="iconise-delete" />
-<a href="editorialspace.html"> <img src="https://img.icons8.com/ios/50/null/pencil--v1.png" class="iconise-edit" /></a>
-
-
-      </div>
-    </div>
-    </div>
+ 
 </body>
 </html>
