--- a/blogs.html
+++ b/blogs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
     <link rel="stylesheet" href="./blogcard.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
       <nav>
@@ -20,10 +21,7 @@
             </div>
         </nav>
     <hr>
-   <center> <H4  class="blog-heading">BLOGS</H4></center>
-   <br>
-   <br>
-   <hr>
+    
 <div class="cardscontainer">
     <div class="blog-card">
         <h2>Blog Post Title</h2>
