--- a/blogs.html
+++ b/blogs.html
@@ -7,6 +7,7 @@
     <title>Blogs</title>
     <link rel="stylesheet" href="./blogcard.css">
     <link rel="stylesheet" href="./style.css">
+    <script  defer src="./blogcard.js"></script>
 </head>
 <body>
       <nav>
