worked on final responsiviness phase final1

--- a/portifolio.html
+++ b/portifolio.html
@@ -48,14 +48,10 @@
         applications that are easy to use and navigate. I am excited about the opportunity to bring my skills and experience
         to
         a new project and continue to grow as a programmer.
+        <center><h4>Project I have worked on</h4></center>
     </div>
     <!--project worked on section-->
-    <div class="project-worked">
-      <h1 class="workedonh">Project worked on</h1>
-      <img src="./graphics/jsconfirm.png" alt="">
-      <img src="./graphics/download.png" alt="">
-      <img src="./graphics/cssproj.png" alt="">
-    </div>
+   
     <footer class="fixedfooter">
         &copy;VTECHNEWS 2023
     </footer>
