--- a/About.html
+++ b/About.html
@@ -23,8 +23,9 @@
         
         <!--end of navigation bar-->
 
-   <div class="about">
-    <!--MAIN  HOME BODY-->
+  <div class="container">
+    <div class="about">
+        <!--MAIN  HOME BODY-->
     </div>
     </div>
     <div class="circleim">
@@ -42,14 +43,30 @@
     </div>
     <div class="right-about">
         <h2 id="abouth2">About Us</h2>
-        <p>This is Web blog created for helping people to the know the latest technology news all over the word it was
+        <p>This is Web blog created for helping people to the 
+            know the latest technology news all over the word it was
             founded in
-            2022 by software engineer Ndayambaje virgile adn it helps users to know more about latest technology and it will
-            continue to provide more if you want to know more about this blog and how you can become a blogger or write for
+            2022 by software engineer Ndayambaje virgile
+             adn it helps users to know more about latest technology and it will
+            continue to provide more if you want to know more 
+            about this blog and how you can become a blogger or write for
             this
-            website you can find the contact of admins and you can become a blogger for this website.</p>
+            website you can find the contact of admins and you can become
+             a blogger for this website. Lorem, ipsum dolor sit 
+             amet consectetur adipisicing elit. Laborum quas impedit quia 
+             porro. Fugiat suscipit ab veritatis, culpa ipsam laborum maiores officiis illo
+            , natus impedit praesentium aliquid, reprehenderit neque veniam.
+            this
+            website you can find the contact of admins and you can become
+            a blogger for this website. Lorem, ipsum dolor sit
+            amet consectetur adipisicing elit. Laborum quas impedit quia
+            porro. Fugiat suscipit ab veritatis, culpa ipsam laborum maiores officiis illo
+            , natus impedit praesentium aliquid, reprehenderit neque veniam.
+        </p>
     </div>
-   </div>
+    </div>
+
+  </div>
 <footer class="fixedfooter">
     &copy;VTECHNEWS 2023
 </footer>
