added new pages

--- a/contactme.html
+++ b/contactme.html
@@ -65,7 +65,7 @@
             }
         }
     </style>
-</hea
+</head>
 
 <body>
 <nav>
@@ -78,7 +78,7 @@
         <a href="./portifolio.html">Portfolio</a>
         <a href="./login.html">Login</a>
     </div>
-</nav
+</nav>
      
        
 
