--- a/readmore.html
+++ b/readmore.html
@@ -21,8 +21,9 @@
             <textarea id="comment-message" name="message" required></textarea>
             <input type="submit" value="Post Comment">
         </form>
+        <script src="com.js"></script>
     </div>
-
+    
 
 </body>
 </html>
