--- a/users.html
+++ b/users.html
@@ -4,6 +4,7 @@
 <head>
     <title>User Management</title>
     <link rel="stylesheet" type="text/css" href="user.css">
+    <script defer src="./users.js"></script>
 </head>
 
 <body>
