--- a/Admindashboard.html
+++ b/Admindashboard.html
@@ -20,6 +20,9 @@
     </div>
     <script defer src="currentuser.js"></script>
     <!--end of user profile-->
+    <center>
+
+    </center>
     <div class="sidepanel">
         
         <center>
