--- a/Admindashboard.html
+++ b/Admindashboard.html
@@ -38,6 +38,9 @@
             <a href="./cmanagement.html"><i class="fas fa-comment-alt"></i> manage-comment</a>
             <br>
             <br>
+            <a href="./message.html"><i class="fas fa-comment-alt"></i> Message</a>
+            <br>
+            <br>
             <a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
 
     </div>
