--- a/blogs.html
+++ b/blogs.html
@@ -29,10 +29,10 @@
         <img src="path/to/image" alt="Blog Post Image">
         <p>Date: January 1, 2022</p>
         <p>This is a preview of the blog post body text. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <a href="path/to/full/post">Read More</a>
+        <a href="readmore.html">Read More</a>
     </div>
     
-    <div class="blog-card">
+    <!-- <div class="blog-card">
         <h2>Blog Post Title</h2>
         <img src="path/to/image" alt="Blog Post Image">
         <p>Date: January 1, 2022</p>
@@ -46,7 +46,7 @@
         <p>This is a preview of the blog post body text. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <a href="path/to/full/post">Read More</a>
     </div>
-</div>
+</div> -->
 <footer class="fixedfooter">
     &copy;VTECHNEWS 2023
 </footer>
