--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <a href="./index.html">
             <h2>virgile</h2>
         </a>
-    <form id="form" action="">
+    <form id="form">
        <center><h2>LOGIN</h2></center>
         <div class="input-control">
             <label for="email">Email</label>
