--- a/users.html
+++ b/users.html
@@ -9,20 +9,21 @@
 
 <body>
     <header>
-        <h1>User Management</h1>
+        <h1>User Management </h1>
+        <a href="./Admindashboard.html"><h3>Dashboard</h3></a>
     </header>
     <main>
         <table>
             <thead>
+               
                 <tr>
                     <th>ID</th>
-                    <th>Name</th>
+                    <th>username</th>
                     <th>Email</th>
-                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <!-- <tr>
                     <td>1</td>
                     <td>John Doe</td>
                     <td>john.doe@example.com</td>
@@ -48,7 +49,7 @@
                         <button>Edit</button>
                         <button>Delete</button>
                     </td>
-                </tr>
+                </tr> -->
             </tbody>
         </table>
         <button>Add User</button>
