--- a/signup.html
+++ b/signup.html
@@ -36,11 +36,11 @@
                     <input id="password" name="password" type="password">
                     <div class="error"></div>
                 </div>
-                <div class="input-control">
+                <!-- <div class="input-control">
                     <label for="password2">Password again</label>
                     <input id="password2" name="password2" type="password">
                     <div class="error"></div>
-                </div>
+                </div> -->
                 <button type="submit" id="submit">Sign Up</button>
             </form>
         </div>
