--- a/Admindashboard.html
+++ b/Admindashboard.html
@@ -69,8 +69,19 @@
     </div>
     <!--board-->
     <div class="view">
-        <h4>View</h4>
+        <h4>Recent blogs</h4>
+        <table id="table-m">
+            <thead>
+             <tr>
+                 <th>title</th>
+                 <th>content</th>
+                 <th>image</th>
+             </tr>
+            </thead>
+            <tbody>
+            </tbody>
+         </table>
     </div>
-
+    <script src="./allblogs.js"></script>
 </body>
 </html>
