--- a/contactme.html
+++ b/contactme.html
@@ -84,7 +84,7 @@
 
     <!-- Add form -->
     
-    <form action="" method="post" id="contact-form">
+    <form id="contact-form">
         <h1>Contact Me</h1>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" >
