--- a/editorialspace.html
+++ b/editorialspace.html
@@ -24,12 +24,8 @@
             <input type="text" id="title" name="title" placeholder="Enter title">
 
             <label for="image">Image:</label>
-            <input type="file" id="image" name="image" onchange="previewImage(event)">
-            <img id="imagePreview" class="image-preview" src="#" alt="">
-
-            <label for="date">Date:</label>
-            <input type="date" id="date" name="date">
-
+            <input type="file" id="image" name="image">
+            
             <label for="body">Body:</label>
             <textarea id="body" name="body" placeholder="Enter text"></textarea>
 
