--- a/message.html
+++ b/message.html
@@ -14,12 +14,17 @@
     </div>
     <div class="container">
         <h1>Message management</h1>
-        <table>
+        <table id="table-m">
+           <thead>
             <tr>
                 <th>Name</th>
                 <th>email</th>
                 <th>Message</th>
             </tr>
+           </thead>
+           <tbody>
+            
+           </tbody>
         </table>
     </div>
 
