added all message comment and users success

--- a/message.html
+++ b/message.html
@@ -20,6 +20,7 @@
                 <th>Name</th>
                 <th>email</th>
                 <th>Message</th>
+                <th>action</th>
             </tr>
            </thead>
            <tbody>
