--- a/users.html
+++ b/users.html
@@ -19,6 +19,7 @@
                  <th>id</th>
                  <th>username</th>
                  <th>email</th>
+                 <th>action</th>
              </tr>
             </thead>
             <tbody>
@@ -62,7 +63,7 @@
                         <button>Edit</button>
                         <button>Delete</button>
                     </td>
-                </tr> -->
+                </tr> 
             </tbody>
         </table>
         <button>Add User</button> -->
