--- a/readmore.html
+++ b/readmore.html
@@ -9,8 +9,8 @@
 </head>
  
     <div class="blog-card">
-        <h2>Blog Post Title</h2>
-        <img src="path/to/image" alt="Blog Post Image">
+        <h2>Nano tech</h2>
+        <img src="./graphics/APPLE.jpg" alt="Blog Post Image">
         <p>Date: January 1, 2022</p>
         <p>This is the full body text of the blog post. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
